--- a/pages/index.html
+++ b/pages/index.html
@@ -73,13 +73,13 @@
     <main>
         <section class="banner">
             <div class="banner-component-one">
-                <h1>Shipping Agents & <br> Brokers</h1>
+                <h1 class="text-left">Shipping Agents & <br> Brokers</h1>
             </div>
             <div>
                 <a href="./contact.html">Contact us</a>
             </div>
             <div class="banner-component-two">
-                <h2>about us</h2>
+                <h2 class="about-us-text">about us</h2>
             </div>
         </section>
         <section class="banner-two">
