--- a/pages/offices.html
+++ b/pages/offices.html
@@ -88,7 +88,7 @@
                         <img src="../assets/img/location.png">
                     </div>
                     <div class="text-container">
-                        <h2>Head Office Buenoas Aires</h2>
+                        <h2>Head Office Buenos Aires</h2>
                         <p>Viamonte 174 - 4° Floor, CABA</p>
                         <p>Simón Bolivar 376, Lomas de Zamora</p>
                     </div>
